--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "server.js",
   "scripts": {
     "setup": "npm install && cd client && npm install",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/server.js",
     "server": "nodemon server/server.js",
     "client": "cd client && npm start",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-    "heroku-postbuild":"cd client && npm install --only=dev && npm install && npm run build"
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "author": "yehooda ishta",
   "license": "ISC",
@@ -24,6 +24,6 @@
     "nodemon": "^2.0.12"
   },
   "engines": {
-    "node":"14.x"
+    "node": "14.x"
   }
 }
