--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
-  "author": "yehooda ishta",
+  "author": "gagu",
   "license": "ISC",
   "dependencies": {
     "concurrently": "^6.2.1",
