--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "setup": "npm install && cd client && npm install",
     "start": "node server/server.js",
     "server": "nodemon server/server.js",
-    "client": "cd client && npm start",
+    "client": "cd client && npm run start",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
@@ -18,7 +18,9 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.13.5"
+    "is-empty": "^1.2.0",
+    "mongoose": "^5.13.5",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
