--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "gagu",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "concurrently": "^6.2.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
